Refactor Yadamu Server to Yadamu Service. Refresh Yadamu GUI
Fix #211
Fix #210
Fix #209
Fix #208
Fix #207

--- a/src/html/gui/logWindow.html
+++ b/src/html/gui/logWindow.html
@@ -33,6 +33,6 @@
 	<div style="margin:0; padding:0; height:10px;"></div>
   </div>
   <!-- <script>require('./yuiLogWindow.js')</script> -->
-  <script src="../../js/gui/yuiLogWindow.cjs")></script>
+  <script src="../../node/gui/yuiLogWindow.cjs")></script>
 </body>
 </html>
